--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,36 @@ header h1 {
     color: #c6ccd1;
 }
 
-/* #cont-tasks {
+#cont-tasks {
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
-} */
+}
+
+h2 {
+    color: #444851;
+    margin-bottom: 10px;
+}
+
+.circle {
+    display: inline-block;
+    border-radius: 100%;
+    border: 1.5px solid;
+    width: 17px;
+    height: 17px;
+    line-height: 17px;
+    font-size: small;
+    padding-left: 2px;
+}
+
+.circle-green {
+    color: #97d8ca;
+    border-color: #97d8ca;
+}
+
+.label {
+    padding: 5px;
+    background-color: #45abea;
+    color: #eff9fd;
+    border-radius: 10px;
+    font-size: 12px;
+}
