--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,11 @@ h2 {
 .label-mobile {
     background-color: #f29e33;
 }
+
+.label-website {
+    background-color: #d863a1;
+}
+
+.label-sales {
+    background-color: #b0c926;
+}
